<resources>
    <string name="app_name">Lab 04 - Activities Omelko</string>
    <string name="author_name">393 Omelko Igor</string>
    <string name="button_ok">Ok</string>
    <string name="button_open">Open</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_exit">Exit</string>
    <string name="text_input_message">Input text</string>
    <string name="text_exit_message">Are you sure you want to exit?</string>
    <string name="text_edit_empty"></string>
    <string name="checkBox_text">Check</string>
    <string name="switch_text">Switch</string>
</resources>